:heavy_plus_sign: recompose / test formated labels instead of locale

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "k-intl",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "index.js",
   "author": "Guillaume CRESPEL <guillaume.crespel@gmail.com>",
   "license": "MIT",
@@ -14,7 +14,9 @@
     "ci": "npm-run-all --parallel lint coveralls"
   },
   "peerDependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "react": "^16.2.0",
+    "recompose": "^0.26.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -40,6 +42,7 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "recompose": "^0.26.0",
     "rollup": "^0.54.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6",
