--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "k-intl",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "index.js",
   "author": "Guillaume CRESPEL <guillaume.crespel@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build:data": "babel-node scripts/build-data",
     "build:core": "cross-env NODE_ENV=build rollup -c ./misc/rollup.config.js",
-    "build": "npm-run-all --parallel build:*",
+    "build": "npm-run-all build:*",
     "lint:js": "eslint --ext js src",
     "lint": "npm-run-all --parallel lint:*",
     "test": "jest",
@@ -26,6 +27,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
     "enzyme": "^3.3.0",
@@ -36,6 +38,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "formatjs-extract-cldr-data": "^4.1.0",
     "jest": "^22.1.3",
     "lodash": "^4.17.4",
     "npm-run-all": "^4.1.2",
@@ -44,7 +47,9 @@
     "rollup": "^0.54.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-memory": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "serialize-javascript": "^1.4.0"
   },
   "babel": {
     "presets": [
@@ -109,5 +114,9 @@
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./misc/test-setup.js"
+  },
+  "dependencies": {
+    "intl-messageformat": "^2.2.0",
+    "react-intl": "^2.4.0"
   }
 }
