--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "npm-run-all build:*",
     "lint:js": "eslint --ext js src",
     "lint": "npm-run-all --parallel lint:*",
-    "test": "yarn build:data && jest",
-    "coveralls": "yarn build:data && jest --coverage --collectCoverageFrom=src/**/*.js && cat ./coverage/lcov.info | coveralls",
+    "test": "jest",
+    "coveralls": "jest --coverage --collectCoverageFrom=src/**/*.js && cat ./coverage/lcov.info | coveralls",
     "ci": "npm-run-all --parallel lint coveralls"
   },
   "dependencies": {
