--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   lockfile:
     docker:
-      - image: circleci/node:9
+      - image: circleci/node:latest
     steps:
       - checkout
       - restore_cache:
@@ -19,14 +19,14 @@ jobs:
 
   debug:
     docker:
-      - image: circleci/node:9
+      - image: circleci/node:latest
     steps:
       - run: node --version
       - run: yarn --version
 
   build:
     docker:
-      - image: circleci/node:9
+      - image: circleci/node:latest
     steps:
       - checkout
       - restore_cache:
