--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "npm-run-all build:*",
     "lint:js": "eslint --ext js,jsx src",
     "lint": "npm-run-all --parallel lint:*",
-    "test": "jest",
-    "coveralls": "jest --coverage --collectCoverageFrom=src/**/*.{js,jsx} && cat ./coverage/lcov.info | coveralls",
+    "test": "cross-env LANG=en_GB.UTF-8 jest",
+    "coveralls": "yarn test --coverage --collectCoverageFrom=src/**/*.{js,jsx} && cat ./coverage/lcov.info | coveralls",
     "ci": "npm-run-all --parallel lint coveralls"
   },
   "dependencies": {
