--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "cross-env": "^5.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.13.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -47,7 +47,7 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "rollup": "^0.60.2",
+    "rollup": "^0.63.2",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-memory": "^3.0.0",
@@ -112,6 +112,8 @@
     },
     "rules": {
       "import/no-extraneous-dependencies": "off",
+      "object-curly-newline": "off",
+      "react/destructuring-assignment": "off",
       "semi": [
         2,
         "never"
