--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm-run-all build:*",
     "lint:js": "eslint --ext js,jsx src",
     "lint": "npm-run-all --parallel lint:*",
-    "test": "cross-env LANG=en_GB.UTF-8 jest",
+    "test": "cross-env jest",
     "coveralls": "yarn test --coverage --collectCoverageFrom=src/**/*.{js,jsx} && cat ./coverage/lcov.info | coveralls",
     "ci": "npm-run-all --parallel lint coveralls"
   },
